# quran-detector

./: .pre-commit-config.yaml  LICENSE  README.en.md  README.md  main.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: pre-commit.yml
qd/: data_loader.py  main.py  main_api.py  matcher.py  models.py  utils.py
quran_detector/: matcher.py
quran_detector/dfiles/: quran-simple.txt
src/: Levenshtein.py
src/quran_detector/: __init__.py  api.py  cli.py  config.py  engine.py  records.py  resources.py  text.py  trie.py
src/quran_detector/data/: non-terminals.txt
tests/: conftest.py  test_golden_outputs.py  test_tweets_eval.py
tests/fixtures/inputs/: 1.txt  10.txt  11.txt  12.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
tests/fixtures/outputs/default/: annotateTxt_1.txt  annotateTxt_10.txt  annotateTxt_11.txt  annotateTxt_12.txt  annotateTxt_2.txt  annotateTxt_3.txt  annotateTxt_4.txt  annotateTxt_5.txt  annotateTxt_6.txt  annotateTxt_7.txt  annotateTxt_8.txt  annotateTxt_9.txt  matchAll_1.txt  matchAll_10.txt  matchAll_11.txt  matchAll_12.txt  matchAll_2.txt  matchAll_3.txt  matchAll_4.txt  matchAll_5.txt  matchAll_6.txt  matchAll_7.txt  matchAll_8.txt  matchAll_9.txt
tests/fixtures/outputs/find_errors_false/: annotateTxt_1.txt  annotateTxt_10.txt  annotateTxt_11.txt  annotateTxt_12.txt  annotateTxt_2.txt  annotateTxt_3.txt  annotateTxt_4.txt  annotateTxt_5.txt  annotateTxt_6.txt  annotateTxt_7.txt  annotateTxt_8.txt  annotateTxt_9.txt  matchAll_1.txt  matchAll_10.txt  matchAll_11.txt  matchAll_12.txt  matchAll_2.txt  matchAll_3.txt  matchAll_4.txt  matchAll_5.txt  matchAll_6.txt  matchAll_7.txt  matchAll_8.txt  matchAll_9.txt
tests/fixtures/outputs/find_missing_false/: annotateTxt_1.txt  annotateTxt_10.txt  annotateTxt_11.txt  annotateTxt_12.txt  annotateTxt_2.txt  annotateTxt_3.txt  annotateTxt_4.txt  annotateTxt_5.txt  annotateTxt_6.txt  annotateTxt_7.txt  annotateTxt_8.txt  annotateTxt_9.txt  matchAll_1.txt  matchAll_10.txt  matchAll_11.txt  matchAll_12.txt  matchAll_2.txt  matchAll_3.txt  matchAll_4.txt  matchAll_5.txt  matchAll_6.txt  matchAll_7.txt  matchAll_8.txt  matchAll_9.txt
tests/fixtures/outputs/high_error_tolerance/: annotateTxt_1.txt  annotateTxt_10.txt  annotateTxt_11.txt  annotateTxt_12.txt  annotateTxt_2.txt  annotateTxt_3.txt  annotateTxt_4.txt  annotateTxt_5.txt  annotateTxt_6.txt  annotateTxt_7.txt  annotateTxt_8.txt  annotateTxt_9.txt  matchAll_1.txt  matchAll_10.txt  matchAll_11.txt  matchAll_12.txt  matchAll_2.txt  matchAll_3.txt  matchAll_4.txt  matchAll_5.txt  matchAll_6.txt  matchAll_7.txt  matchAll_8.txt  matchAll_9.txt
tests/fixtures/outputs/high_min_match/: annotateTxt_1.txt  annotateTxt_10.txt  annotateTxt_11.txt  annotateTxt_12.txt  annotateTxt_2.txt  annotateTxt_3.txt  annotateTxt_4.txt  annotateTxt_5.txt  annotateTxt_6.txt  annotateTxt_7.txt  annotateTxt_8.txt  annotateTxt_9.txt  matchAll_1.txt  matchAll_10.txt  matchAll_11.txt  matchAll_12.txt  matchAll_2.txt  matchAll_3.txt  matchAll_4.txt  matchAll_5.txt  matchAll_6.txt  matchAll_7.txt  matchAll_8.txt  matchAll_9.txt
