[project]
name = "quran-detector"
version = "0.0.1"
description = "Detect Quranic verses and verse fragments in Arabic text (QDetect rewrite)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "python-Levenshtein>=0.25.1"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.19.1",
  "pre-commit>=4.5.1",
  "ruff>=0.14.10",
  "pytest>=9.0.2"
]

[project.scripts]
quran-detector = "quran_detector.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quran_detector = ["data/*.txt", "data/*.xml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["I"]

[tool.mypy]
python_version = "3.12"
files = ["src/quran_detector", "tests"]

[[tool.mypy.overrides]]
module = ["quran_detector.*"]
